# qt_cmake_automoc_test

./: CMakeLists.txt  README.md  copy_libraries.cmake.in  main.cpp  mainwindow.cpp  mainwindow.h  utils.h
